--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/material-top-tabs": "^6.6.13",
+    "@react-navigation/native": "^6.1.17",
+    "@supabase/supabase-js": "^2.43.0",
+    "@tanstack/react-query": "^5.32.1",
     "expo": "~50.0.17",
+    "expo-crypto": "^12.8.1",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "^14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
+    "expo-secure-store": "^12.8.1",
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
@@ -26,8 +32,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-pager-view": "^6.3.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
